// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH cqtuLn"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH jryXLU"
>
  foo
</button>
`;
